fixed available box now displays on top of overflow, but still gets cut off to the right

--- a/frontend/src/components/Grid/Grid.css
+++ b/frontend/src/components/Grid/Grid.css
@@ -53,7 +53,7 @@
     height: 4%;
 }
 .avail-container{
-    position: relative;
+    /* position: relative; */
     background-color: white;
     z-index: 100;
 }
@@ -64,40 +64,15 @@
     /* width: 100%; */
     justify-content: space-between;
     z-index: 3;
+    width: 18vw;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
     /* top: -100px; */
     /* right: 50px; */
     background-color: white;
     border-radius: 6px;
     overflow: revert-layer;
 }
-.avails{
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
-}
-.unavails{
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
-}
-.avail-container{
-    position: absolute;
-    /* top: 50px; */
-    background-color: white;
-    z-index: 1;
-}
 
-.available-wrapper{
-    position: absolute;
-    display: flex;
-    width: 18vw;
-    justify-content: space-between;
-    z-index: 3;
-    background-color: white;
-    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
-}
 .avails{
     display: flex;
     flex-direction: column;
